Change the Message

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> Welcome to Primary School</h1>
+    <h1> Welcome Back - This is my Last 2 days with NTUC Learning Hub</h1>
 </body>
 </html>
