--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1> Welcome Back - This is my Last 2 days with NTUC Learning Hub</h1>
+    <h2> Been a tough Long Months getting up to speed</h2>
 </body>
 </html>
